# ga4gh-mcp-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  PROGRESS.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: auth.md  compatibility.md  demos.md
docs/clients/: amazon-bedrock.md  bedrock.md  claude-code.md  claude-desktop.md  vertex-ai.md
scripts/: compat_matrix.py  ecosystem_report.py  probe_registry.py  smoke.py  smoke.sh
src/ga4gh_mcp/: __init__.py  __main__.py  cache.py  config.py  context.py  errors.py  http.py  http_client.py  liveness.py  models.py  normalize.py  registry.py  server.py  serviceinfo.py  tools.py
src/ga4gh_mcp/auth/: __init__.py  base.py  discovery.py  manager.py  providers.py  resolver.py  store.py
src/ga4gh_mcp/ga4gh/: __init__.py  base.py  drs.py  plugins.py  trs.py  wes.py
src/ga4gh_mcp/services/: __init__.py  base.py  beacon.py  data_connect.py  drs.py  tes.py  trs.py
src/ga4gh_mcp/tools/: __init__.py  auth_tools.py  drs_tools.py  registry_tools.py  service_tools.py  trs_tools.py  wes_tools.py
tests/: conftest.py  test_auth.py  test_federation.py  test_http_client.py  test_live.py  test_live_integration.py  test_liveness.py  test_normalize.py  test_registry.py  test_server.py  test_serviceinfo.py  test_tools.py
tests/fixtures/: probe_results.json
tests/fixtures/registry/: deployments.json  organisations.json  services.json  standards.json
