[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga4gh-mcp-service"
version = "0.1.0"
description = "Universal Model Context Protocol (MCP) server for GA4GH services and the GA4GH Implementation Registry"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Marc Fiume" }]
keywords = ["ga4gh", "mcp", "genomics", "drs", "wes", "trs", "registry", "bioinformatics"]
dependencies = [
    "mcp[cli]>=1.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[project.scripts]
ga4gh-mcp = "ga4gh_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/mfiume/ga4gh-mcp-service"
Repository = "https://github.com/mfiume/ga4gh-mcp-service"

[tool.hatch.build.targets.wheel]
packages = ["src/ga4gh_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
